# KMP-MineStableDiffusion

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  RELEASE_NOTES.md  build.gradle.kts  settings.gradle.kts
.agent/rules/: code-style-guide.md
.github/workflows/: build.yml
ai-rule/: project.md
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/org/onion/diffusion/: MainActivity.kt
composeApp/src/androidMain/kotlin/org/onion/diffusion/native/: DiffusionLoader.android.kt
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-zh/: strings.xml
composeApp/src/commonMain/kotlin/org/onion/diffusion/: App.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/constant/: JsPattern.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/di/: KoinDi.kt  ViewModelModule.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/native/: DiffusionLoader.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/rule/: CommonRuleParser.kt  ExploreRuleParser.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/ui/navigation/: NavActions.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/ui/navigation/graph/: HomeNavGraph.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/ui/navigation/route/: DetailRoute.kt  MainRoute.kt  RootRoute.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/ui/screen/: AdvancedSettingScreen.kt  BookSourceScreen.kt  CopyScreen.kt  HomeScreen.kt  MainScreen.kt  SettingScreen.kt  SplashScreen.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/utils/: ImageLoader.kt  NetworkUtil.kt
composeApp/src/commonMain/kotlin/org/onion/diffusion/viewmodel/: BookSourceViewModel.kt  ChatViewModel.kt
composeApp/src/commonTest/kotlin/org/onion/diffusion/: ComposeAppCommonTest.kt
composeApp/src/commonTest/kotlin/org/onion/read/: ComposeAppCommonTest.kt
composeApp/src/desktopMain/kotlin/org/onion/diffusion/: main.kt
composeApp/src/desktopMain/kotlin/org/onion/diffusion/native/: DiffusionLoader.desktop.kt
composeApp/src/iosArm64Main/kotlin/org/onion/diffusion/: MainViewController.kt
composeApp/src/iosArm64Main/kotlin/org/onion/diffusion/native/: DiffusionLoader.iosArm64.kt
composeApp/src/iosSimulatorArm64Main/kotlin/org/onion/diffusion/native/: DiffusionLoader.iosSimulatorArm64.kt
composeApp/src/jvmMain/kotlin/org/onion/diffusion/utils/: NativeLibraryLoader.kt
composeApp/src/nativeInterop/cinterop/: sdloader.def
composeApp/src/wasmJsMain/kotlin/org/onion/diffusion/: main.kt
cpp/: build_ios.sh
cpp/diffusion-loader.cpp/: CMakeLists.txt  diffusion_loader_jni.cpp
data-model/src/commonMain/kotlin/com/onion/model/: ChatMessage.kt  LoraConfig.kt
data-network/: build.gradle.kts
data-network/src/iosMain/kotlin/com/onion/network/http/: PlatformClient.ios.kt
docs/: AppIcon.icns  online_file.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
patch/: build_ios_in_cpu.patch
server/src/main/kotlin/org/onion/diffusion/: Application.kt
server/src/test/kotlin/org/onion/diffusion/: ApplicationTest.kt
shared/src/androidMain/kotlin/org/onion/diffusion/: Platform.android.kt
shared/src/commonMain/kotlin/org/onion/diffusion/: Constants.kt  Greeting.kt  Platform.kt
shared/src/commonTest/kotlin/org/onion/diffusion/: SharedCommonTest.kt
shared/src/iosMain/kotlin/org/onion/diffusion/: Platform.ios.kt
shared/src/jvmMain/kotlin/org/onion/diffusion/: Platform.jvm.kt
shared/src/wasmJsMain/kotlin/org/onion/diffusion/: Platform.wasmJs.kt
ui-theme/src/commonMain/kotlin/com/onion/theme/style/: Text.kt
